refactor(presentation): migrate UiSearchField to new pattern